# KiClaude

./: .gitignore  Cargo.toml  README.md  SPEC.md  Todo.md  deny.toml  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
crates/cad/: Cargo.toml
crates/cad/src/: impedance.rs  length_match.rs  lib.rs  three_scene.rs  wasm.rs
crates/cad/src/drc/: annular.rs  clearance.rs  courtyard.rs  drill.rs  mod.rs
crates/cad/src/geom/: arc.rs  bbox.rs  mod.rs  point.rs  polygon.rs  polyline.rs
crates/cad/src/index/: mod.rs  rtree.rs
crates/cad/src/routing/: diffpair.rs  mod.rs
crates/cad/src/routing/shove/: engine.rs  geom.rs  mod.rs  route.rs  world.rs
crates/cad/src/routing/walkaround/: astar.rs  grid.rs  inflation.rs  mod.rs
crates/cad/src/scene/: mod.rs  spatial.rs
crates/cad/src/zones/: boolean.rs  fill.rs  mod.rs  thermal.rs
crates/ki/: Cargo.toml  README.md  pyproject.toml
crates/ki/examples/: blinky_roundtrip_check.rs  canonicalize.rs
crates/ki/src/: lib.rs  python.rs  wasm.rs
crates/ki/src/annotate/: mod.rs  tests.rs
crates/ki/src/format/: mod.rs
crates/ki/src/format/v9/: emit.rs  mod.rs  pcb.rs  project.rs  sch.rs  sch_emit.rs  sch_emit_tests.rs  sch_tests.rs  sexpr_helpers.rs  symbols.rs  tests.rs
crates/ki/src/kcir/: diffpair.rs  fab.rs  hierarchy_invariants_tests.rs  lengthgroup.rs  mod.rs  nets.rs  pcb.rs  project.rs  schematic.rs  stackup.rs
crates/ki/src/kcir/hierarchy/: mod.rs  tests.rs
crates/ki/src/kcir/migrations/: mod.rs  tests.rs  v0_2.rs  v0_3.rs  v0_4.rs  v0_5.rs
crates/ki/src/sexpr/: ast.rs  emit.rs  lex.rs  mod.rs  parse.rs
crates/ki/tests/: golden.rs
development/reference-only/ki-mcp-pcb/: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  SPEC.md  pyproject.toml
development/reference-only/ki-mcp-pcb/.claude/: settings.json
development/reference-only/ki-mcp-pcb/.claude/commands/: pcb-fab.md  pcb-new.md  pcb-review.md  pcb-validate.md
development/reference-only/ki-mcp-pcb/.github/workflows/: ci.yml
development/reference-only/ki-mcp-pcb/docs/plans/: 2026-05-19-gui-copilot-g1.md  2026-05-19-gui-copilot-g2.md  2026-05-19-gui-copilot-g3.md  2026-05-20-gui-copilot-g4.md
development/reference-only/ki-mcp-pcb/docs/specs/: SPEC-1-gui-copilot.md
development/reference-only/ki-mcp-pcb/examples/: README.md  blinky.yaml  esp32_c6_rf.yaml  esp32_s3_blinky.ato  stm32_audio.yaml  usb_eth_phy.yaml
development/reference-only/ki-mcp-pcb/libs/: README.md  bga_fanout.yaml  footprints.yaml
development/reference-only/ki-mcp-pcb/scripts/: README.md  kicad_measure_lengths.py  kicad_populate.py  validate_cir.py
development/reference-only/ki-mcp-pcb/tests/: conftest.py  test_ato_parser.py  test_cir_negative.py  test_cli.py  test_diff.py  test_end_to_end.py  test_examples.py  test_impedance.py  test_jlc_sourcing.py  test_kicad_backend.py  test_kicad_cli_wrappers.py  test_kicad_roundtrip.py  test_kipy_placer.py  test_length_tuning.py  test_m2_validators.py  test_m3_validators.py  test_m4_validators.py  test_mcp_contract.py  test_parse_nl.py  test_placement.py  test_populator.py  test_real_designs.py  test_resolver.py  test_roundtrip.py  test_routing.py  test_sch_layout.py  test_sch_pins_wires_hierarchy.py  test_schema_snapshot.py  test_schematic_synthesis.py  test_sourcing.py  test_sym_lib.py  test_web_server.py
development/reference-only/ki-mcp-pcb/tests/golden/: board_schema.json  regenerate.py
development/reference-only/ki-mcp-pcb/tests/llm_evals/: README.md  judge.py  runner.py  test_llm_evals.py
development/reference-only/ki-mcp-pcb/tests/property/: test_cir_invariants.py
development/reference-only/ki-mcp-pcb/tests/real_designs/: README.md  pi_pico.yaml  rp2040_qtpy.yaml  trinket_m0.yaml
services/kiconnector/: pyproject.toml
services/kiconnector/src/kiconnector/: __init__.py  bom.py  drc.py  erc.py  export.py  freerouting.py  kikit.py  main.py  subprocess.py
services/kiconnector/tests/: test_bom.py  test_drc.py  test_erc.py  test_export.py  test_freerouting.py  test_panelize.py  test_versions.py
services/kiserver/: pyproject.toml
services/kiserver/src/kiserver/: __init__.py  dfm.py  library.py  main.py  object_store.py  project.py  sync.py  telemetry.py
services/kiserver/tests/: test_bom_endpoint.py  test_bundled_libs.py  test_dfm.py  test_library.py  test_library_import.py  test_library_search.py  test_model3d.py  test_object_store.py  test_project.py  test_session_fork.py  test_share_routes.py  test_sync.py  test_sync_routes.py  test_ui_tools.py
services/mcp/: pyproject.toml
services/mcp/src/kc_mcp/: __init__.py  _envelope.py  _version.py  build_cli.py  clients.py  diff_cli.py  server.py  stdio.py  validate_cli.py
services/mcp/src/kc_mcp/distributors/: __init__.py  aggregator.py  base.py  cache.py  digikey.py  jlcpcb.py  mouser.py  octopart.py
services/mcp/src/kc_mcp/tools/: __init__.py  bom.py  diff.py  drc.py  erc.py  export.py  freerouting.py  highspeed.py  kcir.py  label.py  mpn.py  netclass.py  panelize.py  ping.py  place.py  project.py  (+9 more)
services/mcp/tests/: test_build_cli.py  test_diff_cli.py  test_highspeed_tools.py  test_kc_ping.py  test_mpn_resolve.py  test_pcb_tools.py  test_schematic_tools.py  test_ui_assertion.py  test_validate_cli.py  test_validate_kc.py  test_validate_m5.py
services/mcp/tests/distributors/: test_aggregator.py  test_cache.py  test_digikey.py  test_jlcpcb.py  test_mouser.py  test_octopart.py  test_sourcing_tools.py
tests/golden/: Cargo.toml  blinky.kicad_pcb
tests/golden/fixtures/: four_layer_blind_via.kicad_pcb  hatched_ground_plane.kicad_pcb  led_with_zone.kicad_pcb  locked_critical_track.kicad_pcb  netclass_diff_pair.kicad_pcb  resistor_smd_pads.kicad_pcb  silkscreen_text.kicad_pcb  tht_pin_header.kicad_pcb  zone_with_cutout.kicad_pcb
tests/golden/src/: lib.rs
tests/golden/tests/: drc_cross_check.rs  round_trip.rs  round_trip_pcb.rs  round_trip_sch.rs  zone_fill.rs
tests/golden/zones/: concave_filled.kicad_pcb  concave_input.kicad_pcb  generate_fixtures.py  simple_filled.kicad_pcb  simple_input.kicad_pcb  thermal_filled.kicad_pcb  thermal_input.kicad_pcb
(+317 files in other folders)
