[workspace]
resolver = "2"
members = [
    "crates/ki",
    "crates/cad",
    "tests/golden",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "Apache-2.0"
authors = ["layerdynamics <layerdynamics@proton.me>"]
repository = "https://github.com/layerdynamics/kiclaude"
homepage = "https://github.com/layerdynamics/kiclaude"
publish = false

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
semver = { version = "1", features = ["serde"] }

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
