[package]
name = "kiclaude-cad"
description = "CAD primitives — geometry, spatial index, DRC kernel — for kiclaude."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true

[lib]
name = "kiclaude_cad"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
# KCIR types — needed by the M3-R-05 length-match analyzer to walk
# `Pcb.tracks` + `Pcb.length_groups`. One-way dep (cad → ki); ki
# does NOT depend on cad to keep the schema crate free of geometry.
kiclaude-ki = { path = "../ki" }
# MIT-licensed Vatti-style polygon boolean kernel — drives the
# zone-fill obstacle union + boundary clipping (M2-R-05a). No GPL
# contamination (cf. SPEC NFR-009 / deny.toml license allowlist).
i_overlay = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"

[dev-dependencies]
proptest = "1"
pretty_assertions = "1"
rand = "0.8"
