[project]
name = "kiclaude-kiserver"
version = "0.1.0"
description = "kiclaude kiserver — FastAPI surface around the PyO3-loaded ki_native crate."
authors = [{ name = "layerdynamics", email = "layerdynamics@proton.me" }]
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "anyio>=4.5",
    "structlog>=24.4",
    "pydantic>=2.9",
    "ki_native>=0.1.0",
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
    "kiclaude-mcp",
]

[project.optional-dependencies]
# Cloud-optional (FR-007 cloud sync / FR-080 share link). The S3
# object-store backend imports boto3 lazily; local-FS is the default and
# needs none of this — keeps the local-first install (FP#8) boto3-free.
s3 = ["boto3>=1.34"]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "boto3>=1.34",
    "moto[s3]>=5.0",
]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kiserver"]
