[project]
name = "kiclaude-mcp"
version = "0.1.0"
description = "kiclaude in-process MCP server — kc_* tools for KiCad project introspection and edits."
authors = [{ name = "layerdynamics", email = "layerdynamics@proton.me" }]
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0",
    "claude-agent-sdk>=0.0.10",
    "anyio>=4.5",
    "structlog>=24.4",
    "pydantic>=2.9",
    # M3-P-03/P-05: real HTTP client for the Digi-Key V4 adapter +
    # the BOM-pricer fan-out / cache layer the other distributor
    # adapters (Mouser, Octopart, JLCPCB) plug into.
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kc_mcp"]
